--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "progress.drwang.tbprogressbaar"
+        applicationId "progress.drwang.tbprogressbar"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
